# reversi-rust

./: Cargo.toml  README.md
.github/workflows/: rust-cache.yml  rust-clippy.yml  rust.yml
src/: lib.rs  main.rs  play.rs  reversi.rs
src/play/: player.rs
src/play/player/: human_player.rs  minimax_bot.rs
src/reversi/: board.rs
src/reversi/board/: display.rs
