[package]
name = "reversi"
description = "A rust implementation of the Reversi game. Reversi is a board game for two players, who take turns dropping pieces of a given color on a game board. "
version = "0.3.3"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["reversi", "board game", "game"]
categories = ["games", "command-line-utilities", "simulation"]
repository = "https://github.com/leo848/reversi"

[dependencies]
rand = "0.8.4"
clap = { version = "3.2.8", features = ["cargo"] }
clearscreen = "1.0.10"
colored = "2.0.0"
itertools = "0.10.3"
spinners = "4.1.0"
split-iter = "0.1.0"
